# GptFunction

./: README.md  gpt_weatherapp.py  pyproject.toml  weather_api.py
ex-01-weatherapp/: README.md  weather_comparison.txt
ex-02-midjorney-api/: image_generator.py  pyproject.toml
ex-03-open-interpreter/: debug.py  flake.nix  log.txt  pyproject.toml  streamlit-example.py
ex-03-open-interpreter/.streamlit/: secrets.toml
ex-03-open-interpreter/interpreter/: interpreter.py  openai_utils.py
