[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["jiaqiwang969 <jiaqiwang969@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
debugpy = "^1.8.0"
openai = "^0.28.1"
pyowm = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
